revising text and code

--- a/Latex/_maintext.tex
+++ b/Latex/_maintext.tex
@@ -153,7 +153,7 @@
 % ↤↤↤↤↤ -------------- S̟U̟B̟-S̟U̟B̟S̟E̟C̟T̟I̟O̟N̟ -------------- ↦↦↦↦↦
             \subsubsection*{County Splits}
 %
-    Avoiding county splits is incorporated into the language of many state constitutions \citep{Grofman1985} and can be seen as a way of guarding against gerrymandering by making it more difficult to draw partisan maps. There are a total of 67 counties in PA, and the state is allocated 18 congressional districts.  Some county splits are necessitated by the size of the county population relative to the ideal population of a congressional district (705,687).  Allegheny and Montgomery must each be split at least twice, while Philadelphia must be split at least three times. If no set of counties exactly equals the ideal congressional population, every districting plan requires a minimum of $n-1$ splits (where $n$ equals the number of congressional districts). The Pennsylvania Supreme Court found that an unusually and egregiously large number of counties were split in the 2011 congressional map, and they found this fact deeply troubling.
+    Avoiding county splits is incorporated into the language of many state constitutions \citep{Grofman1985} and can be seen as a way of guarding against gerrymandering by making it more difficult to draw partisan maps. There are a total of 67 counties in PA, and the state is allocated 18 congressional districts. Some county splits are necessitated by the size of the county population relative to the ideal population of a congressional district (705,687).  Allegheny and Montgomery must each be split at least twice, while Philadelphia must be split at least three times. If no set of counties exactly equals the ideal congressional population, every districting plan requires a minimum of $n-1$ splits (where $n$ equals the number of congressional districts). The Pennsylvania Supreme Court found that an unusually and egregiously large number of counties were split in the 2011 congressional map, and they found this fact deeply troubling.
 \par
 % =================================================================
 % -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE  % 
@@ -166,18 +166,26 @@
 % ================================================================= 
 % -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE --  %
 % -----------------------------------------------------------------
-       \footnote{There is a debate about how to count split counties, which was evident when different parties in the case counted different total county splits for the same plan. One way to count splits to count the total number of counties that are in at least two districts. The other way is to count the number of times a county is split, i.e., the number of separate pieces into which the county is divided. In the first counting method, a county can have portions of itself found in 18 different districts, but have this counted as only one county spit. Under the second method, this wholesale splitting of the county would be counted as 18 splits. While both methods provide useful information, we regard the second as more informative and it is the one reported in Table 1. However, we must also be alert for divisions of a county into two or more discontiguous pieces found within the same district. We call this “fracking,” to provide a term similar sounding to ‘packing’ and ‘cracking.’ We find “fracking” a particularly egregious problem since there is no need for counties to be fracked, and fracking may be used as a gerrymandering tool.  Instances where counties  have multiple discontiguous pieces located in a single district are not discussed in the Pennsylvania Supreme Court ruling on the unconstitutionality of the 2011 Pennsylvania congressional plan. However, our analysis of the 2011 plan reveals several cases of fracking: two of the most egregious are districts 14 and 18 in Allegheny County (Pittsburgh). This concept has also been addressed by the US District Court in North Carolina (\textit{Common Cause v. Rucho} No 1:16-CV-1026 (U.S. District Court, Middle District of North Carolina, 2018, slip op at p. 105 [p. 194])). }
+        \footnote{There is a debate about how to count split counties, which was evident when different parties in the case counted different total county splits for the same plan. One way to count splits to count the total number of counties that are in at least two districts. The other way is to count the number of times a county is split, i.e., the number of separate pieces into which the county is divided. In the first counting method, a county can have portions of itself found in 18 different districts, but have this counted as only one county spit. Under the second method, this wholesale splitting of the county would be counted as 18 splits. While both methods provide useful information, we regard the second as more informative and it is the one reported in Table 1. However, we must also be alert for divisions of a county into two or more discontiguous pieces found within the same district. We call this “fracking,” to provide a term similar sounding to ‘packing’ and ‘cracking.’ We find “fracking” a particularly egregious problem since there is no need for counties to be fracked, and fracking may be used as a gerrymandering tool.  Instances where counties  have multiple discontiguous pieces located in a single district are not discussed in the Pennsylvania Supreme Court ruling on the unconstitutionality of the 2011 Pennsylvania congressional plan. However, our analysis of the 2011 plan reveals several cases of fracking: two of the most egregious are districts 14 and 18 in Allegheny County (Pittsburgh). This concept has also been addressed by the US District Court in North Carolina (\textit{Common Cause v. Rucho} No 1:16-CV-1026 (U.S. District Court, Middle District of North Carolina, 2018, slip op at p. 105 [p. 194])). }
 % ----------------------------------------------------------------- 
 % -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 % =================================================================
-    The Court plan goes even further and gets the number of split counties down to 17. 
+    The Court plan goes even further and gets the number of split counties down to 17.
+% =====================================================================
+% ▀▄▀▄▀▄ F̟I̟G̟U̟R̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ F̟I̟G̟U̟R̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ F̟I̟G̟U̟R̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ F̟I̟
+% ---------------------------------------------------------------------
+\input{Figures/_maps.tex}
+ \begin{center} INSERT FIGURE \ref{fig:maps} ABOUT HERE \end{center}
+% ---------------------------------------------------------------------
+% ▀▄▀▄▀▄ E͎N͎D͎ F͎I͎G͎U͎R͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ F͎I͎G͎U͎R͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ F͎I͎G͎U͎R͎E͎ ▄▀▄
+% ===================================================================== 
 \par
     Which counties get split and how many ways can impact a plan’s election outcome, which can affect both national politics and a county's relationship with the federal government \citep{Ansolabehere2002a}. That the 2011 map is an eyesore vis-a-vis unnecessary splits of county boundaries is revealed clearly in Figure \ref{fig:maps}.
 %
 % ================================================================= 
 % -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE --  %
 % -----------------------------------------------------------------
-    \footnote{We find counties that are split into multiple pieces particularly egregious. ``\textit{Fracking}" occurs when one district is split into two or more non-contiguous pieces of a single county. It was not mentioned in the \textit{LWV} decision, but too can be used as an indicia of partisan (and racial) manipulation. We call this ``\textit{fracking}" to parallel the terminology of other districting terms of ``\textit{cracking}" and ``\textit{packing}". Examples of ``fracking" in the 2011 enacted map include districts 14 \& 18 in Allegheny County (Pittsburgh).}
+        \footnote{We find counties that are split into multiple pieces particularly egregious. ``\textit{Fracking}" occurs when one district is split into two or more non-contiguous pieces of a single county. It was not mentioned in the \textit{LWV} decision, but too can be used as an indicia of partisan (and racial) manipulation. We call this ``\textit{fracking}" to parallel the terminology of other districting terms of ``\textit{cracking}" and ``\textit{packing}". Examples of ``fracking" in the 2011 enacted map include districts 14 \& 18 in Allegheny County (Pittsburgh).}
 % ----------------------------------------------------------------- 
 % -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 % =================================================================
@@ -204,20 +212,19 @@
 % ================================================================= 
 % -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE --  %
 % -----------------------------------------------------------------
-    \footnote{This latter point is reinforced if we examine good government maps prepared by \href{https://www.dailykos.com/stories/2018/2/8/1739648/-Pennsylvania-will-soon-redraw-its-House-map-to-end-GOP-gerrymandering-How-would-you-draw-the-lines}{DailyKos} and by the present authors (available upon request).}
+        \footnote{This latter point is reinforced if we examine good government maps prepared by \href{https://www.dailykos.com/stories/2018/2/8/1739648/-Pennsylvania-will-soon-redraw-its-House-map-to-end-GOP-gerrymandering-How-would-you-draw-the-lines}{DailyKos} and by the present authors (available upon request).}
 % ----------------------------------------------------------------- 
 % -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 % =================================================================
 %
-% =================================================================
-% -- FIGURE -- FIGURE -- FIGURE -- FIGURE -- FIGURE -- FIGURE --   % 
-% ----------------------------------------------------------------- 
-% Maps Of The Proposed Pennsylvania Congressional Districts
+% =====================================================================
+% ▀▄▀▄▀▄ F̟I̟G̟U̟R̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ F̟I̟G̟U̟R̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ F̟I̟G̟U̟R̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ F̟I̟
+% ---------------------------------------------------------------------
+\input{Figures/fig_maps.pdf}
  \begin{center} INSERT FIGURE \ref{fig:maps} ABOUT HERE \end{center}
-        \
-% -----------------------------------------------------------------
-% -- END FIGURE -- END FIGURE -- END FIGURE -- END FIGURE -- END FI %
-% ================================================================= 
+% ---------------------------------------------------------------------
+% ▀▄▀▄▀▄ E͎N͎D͎ F͎I͎G͎U͎R͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ F͎I͎G͎U͎R͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ F͎I͎G͎U͎R͎E͎ ▄▀▄
+% =====================================================================
 \par
     Now we turn to a consideration of probable partisan consequences of the four maps. We begin with a discussion of the 2011 map.
 \par
@@ -229,7 +236,7 @@
 % ================================================================= 
 % -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE --  %
 % -----------------------------------------------------------------
-    \footnote{For consistency, we report the average vote share after imputing 0.25 and 0.75 for uncontested districts. In raw votes, Democrats won more votes than Republicans in 2012, but by taking the imputed average, it shows they won a minority of votes due to disproportionate uncontested districts. The Republican raw vote shares are 49.2\% in 2012, 55.5\% in 2014, and 54.1\% in 2016.}
+        \footnote{For consistency, we report the average vote share after imputing 0.25 and 0.75 for uncontested districts. In raw votes, Democrats won more votes than Republicans in 2012, but by taking the imputed average, it shows they won a minority of votes due to disproportionate uncontested districts. The Republican raw vote shares are 49.2\% in 2012, 55.5\% in 2014, and 54.1\% in 2016.}
 % ----------------------------------------------------------------- 
 % -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 % =================================================================    
@@ -245,7 +252,7 @@
 % ================================================================= 
 % -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE --  %
 % -----------------------------------------------------------------
-    \footnote{Another recently proposed measure is a simplified version of partisan bias which lacks the advantage of separately calculating bias and responsiveness (swing ratio). It is calculated by taking the average two-party vote for the dominant party and adjusting it uniformly downward in each district so that the two parties receive exactly 50\% of the overall vote; then we look to see how far the seat share the dominant party now receives is from 50\% \citep{Wang2016_SLR}.}
+        \footnote{Another recently proposed measure is a simplified version of partisan bias which lacks the advantage of separately calculating bias and responsiveness (swing ratio). It is calculated by taking the average two-party vote for the dominant party and adjusting it uniformly downward in each district so that the two parties receive exactly 50\% of the overall vote; then we look to see how far the seat share the dominant party now receives is from 50\% \citep{Wang2016_SLR}.}
 % ----------------------------------------------------------------- 
 % -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 % =================================================================
@@ -258,7 +265,7 @@
 % ================================================================= 
 % -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE --  %
 % -----------------------------------------------------------------
-    \footnote{Although the basic idea goes back at least as far as \citet{Dahl1956}, the modern \textit{locus classicus} in political science for the idea of partisan bias(and the parallel concept of responsiveness/swing ratio) is \citet{Tufte1973}, with important recent work done by Gary King (see e.g., \citep{GelmanKing1994_unifiedAJPS}; and review in \citet{GrofmanKing2007}). A closely related line of research is found in the political geography literature (with \textit{locus classicus} \citet{Brookes1959, Brookes1960} -- with some further methodological improvements by scholars such as \citet{Johnston1994, Rossiter1997} and \citet{Johnston2002}.}   
+        \footnote{Although the basic idea goes back at least as far as \citet{Dahl1956}, the modern \textit{locus classicus} in political science for the idea of partisan bias(and the parallel concept of responsiveness/swing ratio) is \citet{Tufte1973}, with important recent work done by Gary King (see e.g., \citep{GelmanKing1994_unifiedAJPS}; and review in \citet{GrofmanKing2007}). A closely related line of research is found in the political geography literature (with \textit{locus classicus} \citet{Brookes1959, Brookes1960} -- with some further methodological improvements by scholars such as \citet{Johnston1994, Rossiter1997} and \citet{Johnston2002}.}   
 % ----------------------------------------------------------------- 
 % -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 % =================================================================
@@ -335,15 +342,18 @@
 %        ================================================================= 
 %        -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE --  %
 % ------------------------------------------------------------------------
-	\footnote{We wrote a function in \texttt{R} to assign all VTDs to a district based on the centroid of the VTD. This method creates a slight difference between it and the actual vote, but averages just -0.06\% per district. Most of the mis-allocation is between two adjacent districts, District 1 and District 13, both overwhelmingly Democratic districts.}
+	   \footnote{We wrote a function in \texttt{R} to assign all VTDs to a district based on the centroid of the VTD. This method creates a slight difference between it and the actual vote, but averages just -0.06\% per district. Most of the mis-allocation is between two adjacent districts, District 1 and District 13, both overwhelmingly Democratic districts.}
 % ------------------------------------------------------------------------ 
 %        -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 %        =================================================================
 
 \par
-    \begin{center}    \textbf{US House Election Summaries (PA 2004-2016)} \par \end{center}
-    \begin{center}   \textbf{[ INSERT TABLE \ref{tab:congsum} ABOUT HERE ]} \end{center}
-% ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••• 
+% =====================================================================
+% ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
+% ---------------------------------------------------------------------
+\input{Tables/_tab_congsum.tex}
+ \begin{center}\textbf{INSERT TABLE \ref{tab:congsum} ABOUT HERE} \end{center}
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
 \par
     We do need to check that our five-election composite offers a plausible basis for a prediction model once we take into account electoral tides. 
 %        ================================================================= 
