--- a/Latex/Figures/_maps.tex
+++ b/Latex/Figures/_maps.tex
@@ -1,11 +1,8 @@
-
-
-
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-% Maps Of The Proposed Pennsylvania Congressional Districts
-% =================================================================
-% -- FIGURE -- FIGURE -- FIGURE -- FIGURE -- FIGURE -- FIGURE --   % 
-% ----------------------------------------------------------------- 
+% =====================================================================
+% ▀▄▀▄▀▄ F̟I̟G̟U̟R̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ F̟I̟G̟U̟R̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ F̟I̟G̟U̟R̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ F̟I̟
+% ---------------------------------------------------------------------
+% Maps Of The Proposed Pennsylvania Congressional Districts% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+% 
 \begin{figure}
     \begin{center}
     \caption{Maps Of The Proposed Pennsylvania Congressional Districts}
@@ -14,6 +11,6 @@
     \end{center}
     \tabnotes{Maps a drawn with a Mercator projection. Shapefiles were obtained from the Pennsylvania Supreme Court website for the four government plans.}
 \end{figure}
-% -----------------------------------------------------------------
-% -- END FIGURE -- END FIGURE -- END FIGURE -- END FIGURE -- END FI %
-% =================================================================
+% ---------------------------------------------------------------------
+% ▀▄▀▄▀▄ E͎N͎D͎ F͎I͎G͎U͎R͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ F͎I͎G͎U͎R͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ F͎I͎G͎U͎R͎E͎ ▄▀▄
+% =====================================================================
