--- a/Latex/Tables/_tab_prob.tex
+++ b/Latex/Tables/_tab_prob.tex
@@ -1,8 +1,6 @@
-
-
-% =================================================================
-% -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE  % 
-% -----------------------------------------------------------------
+% =====================================================================
+% ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
+% ---------------------------------------------------------------------
 \begin{landscape}
 \begin{table}[!htbp] \centering 
   \caption{Probabilistic Projections of Partisan Outcomes for Four Plans} 
@@ -17,9 +15,9 @@ Probability Republican Majority & 98.6\% & 96.3\% & 89.1\% & 69.7\% \\
 Probability Democratic Majority & 0.3\% & 0.3\% & 1.5\% & 8.5\% \\ 
 Probability Tied Delegation & 1.1\% & 3.4\% & 9.4\% & 21.8\% \\ 
 \end{tabular}
-\tabnotes{Using  a Composite of Five  Statewide Elections (adjusted to a 50% Vote Share)}
+\tabnotes{Using a Composite of Five Statewide Elections (adjusted to a 50\% Vote Share)}
 \end{table}
 \end{landscape}
-% -----------------------------------------------------------------
-% -- END TABLE -- END TABLE -- END TABLE -- END TABLE -- END TABL %
-% ================================================================= 
+% ---------------------------------------------------------------------
+% ▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀
+% ===================================================================== 
