Updates to code including automatic .tex files

--- a/Latex/Tables/_a_tab_districtvotes.tex
+++ b/Latex/Tables/_a_tab_districtvotes.tex
@@ -1,9 +1,16 @@
-% =================================================================
-% -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE  % 
-% -----------------------------------------------------------------
-% 2016 District-level Summaries for 2011 Enacted Plan
-% ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••• 
-%
+
+
+% =====================================================================
+% ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
+% ---------------------------------------------------------------------
+\input{Tables/_a_tab_districtvotes.tex}
+ \begin{center}\textbf{INSERT TABLE \ref{tab:districtvotes} ABOUT HERE} \end{center}
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+
+
+% =====================================================================
+% ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
+% ---------------------------------------------------------------------
 \begin{table}[!htbp] \centering 
   \caption{2016 District-level Summaries for 2011 Enacted Plan} 
   \label{tab:districtvotes} 
@@ -31,8 +38,9 @@ District & CONG & PRES & USSEN & ATTGEN & AUDITOR & TREASURER & COMPOSITE \\
 Statewide & 54.5\% & 50.9\% & 51.1\% & 48.8\% & 47.7\% & 46.7\% & 49.1\% \\ 
 \end{tabular}
 \tabnotes{Uncontested races and those with only negligible competition will be imputed with 0.25 and 0.75 for the respective winners. All votes are calculated from the Republican perspective of the two-party vote. Composite does NOT include the Congressional elections. The statewide average is the unweighted mean of districts.}
-\end{table} 
-%
-% -----------------------------------------------------------------
-% -- END TABLE -- END TABLE -- END TABLE -- END TABLE -- END TABL %
-% ================================================================= 
+\end{table}
+% ---------------------------------------------------------------------
+% ▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀
+% ===================================================================== 
+ 
+ 
