--- a/Tables/_tab_congsum.tex
+++ b/Tables/_tab_congsum.tex
@@ -3,31 +3,30 @@
 % =====================================================================
 % ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
 % ---------------------------------------------------------------------
-\input{Tables/_tab_prob.tex}
- \begin{center}\textbf{INSERT TABLE \ref{tab:prob} ABOUT HERE} \end{center}
+\input{Tables/_tab_congsum.tex}
+ \begin{center}\textbf{INSERT TABLE \ref{tab:congsum} ABOUT HERE} \end{center}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
 
 
 % =====================================================================
 % ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
 % ---------------------------------------------------------------------
-\begin{landscape}
 \begin{table}[!htbp] \centering 
-  \caption{Probabilistic Projections of Partisan Outcomes for Four Plans at 50\% Vote-Share} 
-  \label{tab:prob} 
+  \caption{U.S. House Election Summaries \\ \hspace{2cm}(PA 2012-2016 Enacted Map)} 
+  \label{tab:congsum} 
 \begin{tabular}{@{\extracolsep{-5pt}} ccccc} 
- & 2011 Enacted & Joint Legislative & Gov. Wolf & 2018 Court Remedial \\ 
+ & 2012 & 2014 & 2016 & AVE \\ 
 \hline \\[-1.8ex] 
-Mean Seat Share & 12.2R-5.8D & 11.7R-6.3D & 10.8R-7.2D & 10.2R-7.8D \\ 
- & {\small\textit{[10.8R-7.2D, 14.4R-3.6D]}} & {\small\textit{[9R-9D, 14.4R-3.6D]}} & {\small\textit{[9R-9D, 12.6R-5.4D]}} & {\small\textit{[7.2R-10.8D, 12.6R-5.4D]}} \\ 
-Median Seat Share & 12R-6D & 12R-6D & 11R-7D & 10R-8D \\ 
-Probability Republican Majority & 98.6\% & 97.3\% & 88.3\% & 69.4\% \\ 
-Probability Democratic Majority & 0.3\% & 0.3\% & 2.0\% & 6.6\% \\ 
-Probability Tied Delegation & 1.1\% & 2.4\% & 9.7\% & 24.0\% \\ 
+Seats &  [13R-5D] &  [13R-5D] &  [13R-5D] & [13R-5D] \\ 
+Seat \% & 72.2\% & 72.2\% & 72.2\% & 72.0\% \\ 
+Votes & 51.1\% & 55.5\% & 54.2\% & 53.3\% \\ 
+Bias & 0.13 & 0.1 & 0.11 & 0.11 \\ 
+Efficiency Gap & 0.21 & 0.11 & 0.17 & 0.16 \\ 
+Mean/Median & 0.06 & 0.06 & 0.06 & 0.06 \\ 
+Declination & 0.46 & 0.36 & 0.39 & 0.4 \\ 
 \end{tabular}
-\tabnotes{Using a Composite of Five Statewide Elections (adjusted to a 50\% Vote Share) but not correcting for incumbency. We report the mean seat-share from 1,000 simulations, along with a 95\% range of the simulated outcomes.}
+\tabnotes{Calculations based on actual congressional elections in Pennsylvania under the map found unconstitutional in 2018. Uncontested races are imputed with 0.25 and 0.75 for the respective winners. Un-adjusted Republican two-party vote totals are 49.2\% for 2012, 55.5\% for 2014, and 54.1\% for 2016. All votes are calculated from the Republican perspective of the two-party vote. We've adjusted all gerrymandering measures such that negative numbers indicate bias in favor of the Democrats.}
 \end{table}
-\end{landscape}
 % ---------------------------------------------------------------------
 % ▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀
 % ===================================================================== 
