--- a/Tables/_tab_prob.tex
+++ b/Tables/_tab_prob.tex
@@ -18,8 +18,8 @@
 \begin{tabular}{@{\extracolsep{-5pt}} ccccc} 
  & 2011 Enacted & Joint Legislative & Gov. Wolf & 2018 Court Remedial \\ 
 \hline \\[-1.8ex] 
-Mean Seat Share & 12.2R-5.8D & 11.7R-6.3D & 10.8R-7.2D & 10.2R-7.8D \\ 
- & {\small\textit{[10.8R-7.2D, 14.4R-3.6D]}} & {\small\textit{[9R-9D, 14.4R-3.6D]}} & {\small\textit{[9R-9D, 12.6R-5.4D]}} & {\small\textit{[7.2R-10.8D, 12.6R-5.4D]}} \\ 
+Mean Seat Share & 12.23R-5.77D & 11.69R-6.31D & 10.81R-7.19D & 10.2R-7.8D \\ 
+SDS & (10.8R-7.2D, 14.4R-3.6D) & (9R-9D, 14.4R-3.6D) & (9R-9D, 12.6R-5.4D) & (7.2R-10.8D, 12.6R-5.4D) \\ 
 Median Seat Share & 12R-6D & 12R-6D & 11R-7D & 10R-8D \\ 
 Probability Republican Majority & 98.6\% & 97.3\% & 88.3\% & 69.4\% \\ 
 Probability Democratic Majority & 0.3\% & 0.3\% & 2.0\% & 6.6\% \\ 
