--- a/Latex/Tables/a_tab_congress_predict.tex
+++ b/Latex/Tables/a_tab_congress_predict.tex
@@ -1,13 +1,3 @@
-
-
-% =====================================================================
-% ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
-% ---------------------------------------------------------------------
-\input{Tables/a_tab_congress_predict.tex}
- \begin{center}\textbf{INSERT TABLE \ref{tab:tab_congress_predict} ABOUT HERE} \end{center}
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-
-
 % =====================================================================
 % ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
 % ---------------------------------------------------------------------
@@ -36,10 +26,8 @@
  N & 18 & 18 & 18 & 18 & 18 & 18 & 18 \\ 
 Adjusted R$^{2}$ & 0.91 & 0.93 & 0.93 & 0.89 & 0.91 & 0.92 & 0.91 \\ 
 \end{tabular}
-\tabnotes{$^{*}$p $<$ 0.05; $^{**}$p $<$ .01; $^{***}$p $<$ 0.001 \\ Uncontested (or non-competitive) elections replaced with 0.25 \& 0.75 vote shares. Regressions are unweighted, ie, all districts are assumed to have identical turnout. This is the usual way political scientist measure aggregate congressional vote \cite{GelmanKing1994_unifiedAJPS}. \}
+\tabnotes{$^{*}$p $<$ 0.05; $^{**}$p $<$ .01; $^{***}$p $<$ 0.001 \\ Uncontested (or non-competitive) elections replaced with 0.25 \& 0.75 vote shares. Regressions are unweighted, ie, all districts are assumed to have identical turnout. This is the usual way political scientist measure aggregate congressional vote \cite{GelmanKing1994_unifiedAJPS}. \\}
 \end{table}
 % ---------------------------------------------------------------------
 % ▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀
 % ===================================================================== 
- 
- 
