--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -50,27 +50,27 @@
 \input{_maintext.tex}
 % =================================================================
 % - Bibliography
-    \input{Tables/_tab_summaries.tex}
-\clearpage
-    \begin{landscape}
-        \input{Tables/_tab_congsum.tex}
-    \end{landscape}
-\clearpage
-    \begin{landscape}
-            \input{Tables/_tab_gerry.tex}
-    \end{landscape}
-\clearpage
-    \begin{landscape}
-        \input{Tables/_tab_prob.tex}
-    \end{landscape}
+%     \input{Tables/_tab_summaries.tex}
 % \clearpage
+%     \begin{landscape}
+%         \input{Tables/_tab_congsum.tex}
+%     \end{landscape}
+% \clearpage
+%     \begin{landscape}
+%             \input{Tables/_tab_gerry.tex}
+%     \end{landscape}
+% \clearpage
+%     \begin{landscape}
+%         \input{Tables/_tab_prob.tex}
+%     \end{landscape}
+% % \clearpage
 %     \begin{landscape}
 %         \input{Tables/_tab_states_compare.tex}
 %     \end{landscape}
 \clearpage
 
 
-    \input{Figures/_maps.tex}
+    % \input{Figures/_maps.tex}
 
     \nolinenumbers
     \newgeometry{
@@ -95,7 +95,7 @@
         \clearpage
     \input{Tables/a_tab_districtvotes.tex}
          \clearpage
-    \input{Tables/_a_tab_congress_predict.tex}
+    \input{Tables/a_tab_congress_predict.tex}
         \clearpage
 
 \end{document}
