--- a/Latex/Tables/_tab_congsum.tex
+++ b/Latex/Tables/_tab_congsum.tex
@@ -1,8 +1,18 @@
+
+
+% =====================================================================
+% ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
+% ---------------------------------------------------------------------
+\input{Tables/_tab_congsum.tex}
+ \begin{center}\textbf{INSERT TABLE \ref{tab:congsum} ABOUT HERE} \end{center}
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+
+
 % =====================================================================
 % ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
 % ---------------------------------------------------------------------
 \begin{table}[!htbp] \centering 
-  \caption{U.S. House Election Summaries \\ {\Large\hspace{4cm}(PA 2012-2016 Enacted Map)}} 
+  \caption{U.S. House Election Summaries \\ {\large\hspace{4cm}(PA 2012-2016 Enacted Map)}} 
   \label{tab:congsum} 
 \begin{tabular}{@{\extracolsep{-5pt}} ccccc} 
  & 2012 & 2014 & 2016 & AVE \\ 
@@ -20,3 +30,5 @@ Declination & 0.46 & 0.36 & 0.39 & 0.4 \\
 % ---------------------------------------------------------------------
 % ▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀
 % ===================================================================== 
+ 
+ 
