--- a/Latex/Tables/_tab_gerry.tex
+++ b/Latex/Tables/_tab_gerry.tex
@@ -1,3 +1,13 @@
+
+
+% =====================================================================
+% ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
+% ---------------------------------------------------------------------
+\input{Tables/_tab_gerry.tex}
+ \begin{center}\textbf{INSERT TABLE \ref{tab:gerry} ABOUT HERE} \end{center}
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+
+
 % =====================================================================
 % ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
 % ---------------------------------------------------------------------
@@ -21,3 +31,5 @@ Declination & 0.39$^{**}$ & 0.33$^{*}$ & 0.21$^{}$ & 0.14$^{}$ \\
 % ---------------------------------------------------------------------
 % ▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀
 % ===================================================================== 
+ 
+ 
