--- a/Latex/Tables/_tab_prob.tex
+++ b/Latex/Tables/_tab_prob.tex
@@ -1,3 +1,13 @@
+
+
+% =====================================================================
+% ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
+% ---------------------------------------------------------------------
+\input{Tables/_tab_prob.tex}
+ \begin{center}\textbf{INSERT TABLE \ref{tab:prob} ABOUT HERE} \end{center}
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+
+
 % =====================================================================
 % ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
 % ---------------------------------------------------------------------
@@ -21,3 +31,5 @@ Probability Tied Delegation & 1.1\% & 2.4\% & 9.7\% & 24.0\% \\
 % ---------------------------------------------------------------------
 % ▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀
 % ===================================================================== 
+ 
+ 
