--- a/Latex/Tables/_tab_summaries.tex
+++ b/Latex/Tables/_tab_summaries.tex
@@ -1,3 +1,13 @@
+
+
+% =====================================================================
+% ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
+% ---------------------------------------------------------------------
+\input{Tables/_tab_summaries.tex}
+ \begin{center}\textbf{INSERT TABLE \ref{tab:summaries} ABOUT HERE} \end{center}
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+
+
 % =====================================================================
 % ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
 % ---------------------------------------------------------------------
@@ -17,4 +27,6 @@ Gov. Wolf & $19$ & $0.393$ & $0.310$ \\
 \end{table}
 % ---------------------------------------------------------------------
 % ▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ T͎A͎B͎L͎E͎ ▄▀▄▀▄▀
-% =====================================================================
+% ===================================================================== 
+ 
+ 
