--- a/Latex/_maintext.tex
+++ b/Latex/_maintext.tex
@@ -120,7 +120,7 @@
 % =================================================================
     However, the U.S. Supreme Court has declined reviewing either the state court opinion rejecting the 2011 plan or the state court’s chosen map -- presumably because these decision are based entirely on state law.
 \par
-    In addition to the rejected 2011 and the court-ordered 2018 map, we also address the partisan and other traditional features of two maps offered to the Pennsylvania Court as a proposed remedy for constitutional violation found in the 2011 map: the \textit{joint legislative} plan offered by Republican legislators from both chambers, and the congressional map proposed by the Democratic governor (\textit{Gov. Wolf}). Here we focus on the question of whether either of these plans was a \textit{stealth gerrymander} done to aid the party drawing the map.
+    In addition to the rejected 2011 and the court-ordered 2018 map, we also address the partisan and other traditional features of two maps offered to the Pennsylvania Court as a proposed remedy for constitutional violation found in the 2011 map: the \textit{Joint Legislative} plan offered by Republican legislators from both chambers, and the map proposed by the Democratic governor (\textit{Gov. Wolf}). Here we focus on the question of whether either of these plans was a \textit{stealth gerrymander} done to aid the party drawing the map.
 \par
 % =================================================================
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
@@ -130,7 +130,7 @@
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
     \section{Evaluating the Various Plans -- Methods and Theory}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-    As noted above, to contrast the Court-ordered Remedial plan with the 2011 Enacted plan, and to make further comparisons to the two most politically important remedy plans offered to the Court, the joint plan proposed by the Republicans leaders of the two legislative chambers, and the Governor’s proposed plan as a Democratic alternative, we will look at a number of features of each of these four plans as a whole.  We do not, however, discuss district-specific criteria for identifying gerrymandering in these maps, since, although some district-specific evidence was presented about the 2011 map in the trial testimony by an expert who was highly knowledgeable about communities of interest in the state, the Pennsylvania Supreme Court opinion itself offers a \underline{statewide} standard for a finding of unconstitutional partisan gerrymandering. 
+    To facilatate comparisons to the two most politically important remedy plans offered to the Court, the joint plan proposed by the Republicans leaders of the two legislative chambers, and the Governor’s proposed plan as a Democratic alternative, we look at a number of features in each of the four plans as a whole. We do not, however, discuss district-specific criteria for identifying gerrymandering in these maps, since, although some district-specific evidence was presented about the 2011 map in the trial testimony by an expert who was highly knowledgeable about communities of interest in the state, the Pennsylvania Supreme Court opinion itself offers a \underline{statewide} standard for a finding of unconstitutional partisan gerrymandering. 
    % ================================================================= 
 % -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE --  %
 % -----------------------------------------------------------------
@@ -140,24 +140,26 @@
 % ================================================================= 
     All the plans create contiguous districts. Similarly, all four plans appear to satisfy voting rights requirements. Thus, we do not discuss these two ``good government” criteria further. Consequently, we limit ourselves to metrics that report results for a jurisdiction as whole. 
 \par
-% =================================================================
-% -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE  % 
-% -----------------------------------------------------------------
-    \input{Tables/_tab_summaries.tex}
-        \begin{center} INSERT TABLE \ref{tab:summaries} ABOUT HERE \end{center}
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-\par
-    We begin our analyses describing map features distinct from projected (or actual) partisan outcomes or proposed measures of partisan effects. Table \ref{tab:summaries} offers a comparison of two key good government features of the map.
-\begin{itemize}
-    \item the number of county splits, since the Pennsylvania Supreme Court specifically sought to limit the number of counties spanning multiple districts
-    \item compactness measures, since compactness is also a criterion specifically referenced by the Pennsylvania Supreme Court
-\end{itemize}
-\par
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
 % ▀▄▀▄▀▄ SUBSECTION -- SUBSECTION -- SUBSECTION -- SUBSECTION -- ▄▀▄▀▄▀
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
         \subsection*{Measurement and Data}
 % ------ ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+% =====================================================================
+% ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
+% ---------------------------------------------------------------------
+	\input{Tables/_tab_summaries.tex}
+		\begin{center}\textbf{INSERT TABLE \ref{tab:summaries} ABOUT HERE} \end{center}
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+\par
+    We begin our analyses describing map features distinct from partisan outcomes or proposed measures of partisan asymmetries. Table \ref{tab:summaries} offers a comparison of two key good government features of the map.
+%
+	\begin{itemize}
+	    \item the number of county splits, since the Pennsylvania Supreme Court specifically sought to limit the number of counties spanning multiple districts
+	    \item compactness measures, since compactness is also a criterion specifically referenced by the Pennsylvania Supreme Court
+	\end{itemize}
+%
+\par
 % ↤↤↤↤↤ -------------- S̟U̟B̟-S̟U̟B̟S̟E̟C̟T̟I̟O̟N̟ -------------- ↦↦↦↦↦
             \subsubsection*{County Splits}
 % ↤↤↤↤↤ -------------- S̟U̟B̟-S̟U̟B̟S̟E̟C̟T̟I̟O̟N̟ -------------- ↦↦↦↦↦
