--- a/Latex/Tables/_tab_gerry.tex
+++ b/Latex/Tables/_tab_gerry.tex
@@ -12,7 +12,7 @@
 % ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
 % ---------------------------------------------------------------------
 \begin{table}[!htbp] \centering 
-  \caption{Measures of Gerrymandering for the Four Considered Plans} 
+  \caption{Measures of Gerrymandering for the Four Considered Plans at 50\% Vote Share} 
   \label{tab:gerry} 
 \begin{tabular}{@{\extracolsep{-5pt}} ccccc} 
  & 2011 Enacted & Joint Legislative & Gov. Wolf & 2018 Court Remedial \\ 
